---
source: compiler/plc_xml/src/model/pou.rs
expression: "xml_parser::visit(&content)"
---
Ok(
    Project {
        pous: [
            Pou {
                name: "foo",
                pou_type: Program,
                body: Body {
                    function_block_diagram: Some(
                        FunctionBlockDiagram {
                            nodes: {},
                        },
                    ),
                },
                actions: [],
                interface: Some(
                    Interface {
                        add_data: Some(
                            Data {
                                content: "PROGRAM foo\nVAR\n\nEND_VAR\nEND_PROGRAM",
                                handle: Implementation,
                            },
                        ),
                    },
                ),
            },
        ],
    },
)
